# tenders-agent

./: .dockerignore  Dockerfile  POSTGRES_MEMORY.md  README.md  pyproject.toml
src/tenders_agent/: agent.py  auth.py  config.py  main.py  routes.py  session.py
src/tenders_agent/prompts/: gc_pressure.md  general.md  provisioning.md  root.md  skew.md  spill.md
